--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pages/index.css">
-  <link rel="stylesheet" href="blocks/header.css">
-  <link rel="stylesheet" href="blocks/footer.css">
-  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -15,9 +12,9 @@
       <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="header__link" href="#" >Узнать&#8594;</a>
+        <a class="header__link" href="#" >Узнать&rarr;</a>
       </p>
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
       <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка. Автор Федор Решетников. Иллюстрация.">
     </header>
 
@@ -76,8 +73,8 @@
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-         <iframe class="video__iframe" width="1180" height="664" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         <iframe class="video__iframe" width="1180" height="664" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -98,7 +95,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a class="feynman__link" href="#" >Подробнее&#8594;</a>
+        <a class="feynman__link" href="#" >Подробнее&rarr;</a>
         <img class="feynman__img" src="images/feynman.png" alt="Ричард Фейман, американский ученый. Основные достижения в области теоретической физики.">
       </section>
 
@@ -145,17 +142,17 @@
 
       <section class="khan">
         <div class="khan__container">
-          <h3 class="khan__author">Салман Хан</h3>
+          <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир - школа</h2>
-          <p class="khan__quote"> Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
+          <blockquote class="khan__quote"> Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
             по всему миру. Книгу "Весь мир - школа" нужно прочитать всем, кто занимается
             образованием - так учащиеся повсюду смогут получит навыки и знания, которые
-            приносят успех в школе, карьере и жизни.</p>
+            приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги Салмана Хана под названием Весь мир - школа.">
-            <a class="khan__buy-link" href="#" >Купить книгу&#8594;</a>
+            <a class="khan__buy-link" href="#" >Купить книгу&rarr;</a>
           </div>
         </div>
       </section>
@@ -208,18 +205,20 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <img class="resources__logo" src="images/resources-arzamas.svg" alt="Логотип Арзамас">
-          <img class="resources__logo" src="images/resources-n1.svg" alt="Логотип N+1">
-          <img class="resources__logo" src="images/resources-strelka.svg" alt="Логотип Стрелка">
-          <img class="resources__logo" src="images/resources-polka.svg" alt="Логотип Полка">
-        </div>
+        <nav>
+          <ul class="resources__logo-zone">
+            <li><img class="resources__logo" src="images/resources-arzamas.svg" alt="Логотип Арзамас"></li>
+            <li><img class="resources__logo" src="images/resources-n1.svg" alt="Логотип N+1"></li>
+            <li><img class="resources__logo" src="images/resources-strelka.svg" alt="Логотип Стрелка"></li>
+            <li><img class="resources__logo" src="images/resources-polka.svg" alt="Логотип Полка"></li>
+          </ul>
+        </nav>
       </section>
     </main>
 
